Apply suggestions from code review
Add suggestions from co-pilot

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>